src/objects/Checkin__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <inlineHelpText>チェックインした位置の住所を別途保存</inlineHelpText>
        <label>住所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationName__c</fullName>
        <inlineHelpText>お店の名前などチェックインした位置の名前を保存する</inlineHelpText>
        <label>ロケーション名</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>地理位置情報のオプション：小数
小数点の位置：15</inlineHelpText>
        <label>ロケーション</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>NickName__c</fullName>
        <inlineHelpText>チェックインしたユーザのニックネームを保存する</inlineHelpText>
        <label>ニックネーム</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>チェックイン</label>
    <listViews>
        <fullName>GroupMail_Checkin</fullName>
        <filterScope>Queue</filterScope>
        <label>メールテスト</label>
        <queue>GroupMail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>チェックイン番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>